--- a/src/App.css
+++ b/src/App.css
@@ -1,16 +1,14 @@
+*,
+*::before,
+*::after {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+
 .App {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
 }
 
 .App-header {
@@ -20,19 +18,50 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  font-size: 100px;
+  color: #282c34;
 }
 
-.App-link {
-  color: #61dafb;
+.App-main {
+  min-height: 40vh;
+  min-width: 50vw;
+  border: 5px solid #61DBFB;
+  border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 20px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.counter-wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  flex-grow: 3;
+  background-color: #61DBFB;
+  border: 1px solid #61DBFB;
+  border-radius: 10px;
+}
+
+.buttons-wrapper {
+  display: flex;
+  justify-content: space-around;
+  flex-grow: 1;
+  width: 100%;
+  border: 1px solid #61DBFB;
+  border-radius: 10px;
+  margin-top: 20px;
+  padding: 10px;
+}
+
+.my-button {
+  min-width: 45%;
+  font-size: 40px;
+  background-color: #61DBFB;
+  border-radius: 20px;
+}
+
+.max-value {
+  color: red;
 }
